--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,6 @@ bootVersion = 3.0.0
 shadowVersion = 7.1.2
 gitPropVersion = 2.4.1
 
+exposedVersion = 0.41.1
+h2Version = 2.1.214
 guavaVersion=31.1-jre
